Add missing profile pictures and githubs

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -760,7 +760,7 @@ speakers:
   github: https://github.com/larsrh
 - name: Tomasz Godzik
   position: VirtusLab
-  image: assets/img/2025/speakers/tomasz-godzik.jpg
+  image: assets/img/2025/speakers/tomasz-godzik.jpeg
   about: Tomasz has worked with multiple programming language tools through the years
     trying to provide a productive environment for other developers to interact with.
     Currently, team lead of Scala Open Source team at VirtusLab.
@@ -796,7 +796,7 @@ speakers:
   github: https://github.com/majk-p
 - name: Adrien Piquerez
   position: Scala Center
-  image: assets/img/2025/speakers/adrien-piquerez.jpg
+  image: assets/img/2025/speakers/adrien-piquerez.jpeg
   about: I am a compiler engineer at Digital Asset and former member of the Scala
     Center. I contributed to Scala 3, sbt and the Scala debugger.
   talk: coding-the-game-of-unspoken
@@ -913,7 +913,7 @@ speakers:
   talk: tree-sitting-will-continue-until
   # linkedin: ''
   twitter: https://x.com/velvetbaldmime
-  # github: ''
+  github: https://github.com/keynmol
 - name: Mateusz Kubuszok
   position: ''
   image: assets/img/2025/speakers/mateusz-kubuszok.jpg
@@ -922,7 +922,7 @@ speakers:
   talk: can-we-have-the-standard
   # linkedin: ''
   twitter: https://x.com/MateuszKubuszok
-  # github: ''
+  github: https://github.com/MateuszKubuszok
 - name: Rikito Taniguchi
   position: VirtusLab
   image: assets/img/2025/speakers/rikito-taniguchi.jpg
@@ -959,7 +959,7 @@ speakers:
   github: https://github.com/jchapuis
 - name: Sébastien Doeraene
   position: EPFL, Scala Center
-  image: assets/img/2025/speakers/sebastien-doeraene.jpg
+  image: assets/img/2025/speakers/sebastien-doeraene.png
   about: Sébastien Doeraene is a compiler/runtime systems hacker and a Scala enthusiast.
     Best known as the author of [Scala.js](https://www.scala-js.org/), he is now an
     engineer at the [Scala Center](https://scala.epfl.ch/) and part-time lecturer
@@ -1047,7 +1047,7 @@ speakers:
   talk: exploring-build-caching-a-practical
   # linkedin: ''
   twitter: https://x.com/mnduhem
-  # github: ''
+  github: https://github.com/Duhemm
 - name: Eugene Yokota
   position: Netflix
   image: assets/img/2025/speakers/eugene_yokota.jpg
@@ -1056,7 +1056,7 @@ speakers:
   talk: sbt-2-0-go-big
   # linkedin: ''
   twitter: https://x.com/eed3si9n
-  # github: ''
+  github: https://github.com/eed3si9n
 - name: Daniel Ciocîrlan
   position: Rock the JVM
   image: assets/img/2025/speakers/daniel-ciocirlan.png
@@ -1071,7 +1071,7 @@ speakers:
   talk: a-new-scala-ethos
   # linkedin: ''
   twitter: https://x.com/rockthejvm
-  # github: ''
+  github: https://github.com/daniel-ciocirlan
 - name: Oliver Bračevac
   position: ''
   image: assets/img/2025/speakers/oliver-bracevac.jpg
@@ -1125,7 +1125,7 @@ speakers:
   talk: what-scala-can-learn-from
   # linkedin: ''
   # twitter: ''
-  # github: ''
+  github: https://github.com/kyouko-taiga
 - name: Andrei Kucharavy
   position: ''
   image: assets/img/2025/speakers/andrei-kucharavy.jpg
@@ -1145,7 +1145,7 @@ speakers:
   talk: on-track-with-tracked
   # linkedin: ''
   # twitter: ''
-  # github: ''
+  github: https://github.com/KacperFKorban
 - name: Anna Herlihy
   position: ''
   image: assets/img/2025/speakers/anna-herlihy.jpg
@@ -1156,4 +1156,4 @@ speakers:
   talk: macro-free-type-safe-database-queries-in
   # linkedin: ''
   # twitter: ''
-  # github: ''
+  github: https://github.com/aherlihy
