Update schedule for 2025: assign Eugene Flesselle as a second speaker for the "What Scala Can Learn From" talk.

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1189,7 +1189,7 @@ speakers:
   position: ''
   image: assets/img/2025/speakers/eugene-flesselle.jpg
   about: ''
-  talk: ''
+  talk: what-scala-can-learn-from
   # linkedin: ''
   # twitter: ''
   # github: ''
