Fix company affiliation

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -578,7 +578,7 @@ speakers:
   # # twitter: ''
   github: https://github.com/armanbilge
 - name: Kannupriya Kalra
-  position: Scala Center
+  position: ''
   image: assets/img/2025/speakers/kannupriya-kalra.jpg
   about: 'Kannupriya Kalra is the org admin for the Google Summer of Code 2024 and
     2025 programs with Scala Center, where she plays a key role in shaping the future
